--- a/App/MainPage.xaml
+++ b/App/MainPage.xaml
@@ -156,7 +156,7 @@
                                     <AppBarButton.Flyout>
                                         <MenuFlyout>
                                             <MenuFlyoutItem Text="Edit"/>
-                                            <MenuFlyoutItem Text="Delete"/>
+                                            <MenuFlyoutItem Text="Delete" Click="Delete_Click"/>
                                             <MenuFlyoutItem Text="Share" Click="Share_Click"/>
                                         </MenuFlyout>
                                     </AppBarButton.Flyout>
